# pattern

./: .clang-format  CMakeLists.txt  observable.h  observable_test.cpp
